# ITU_Student_Convince_AI

./: .dockerignore  .gitignore  Dockerfile  README.md  SYSTEM_PROMPT.md  camera_client.py  disable_gemini_features.sh  docker-compose.override.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-camera.txt  requirements.txt
AIme_Girl-main/: docker-compose.mps.yml
AIme_Girl-main/dockerless/: .gitignore  start_stt_mps.sh
app/: config.py  main.py  manager.py  processing.py  scoring.py  session.py
app/detectors/: emotion.py  face.py  gaze.py  pose.py  posture.py  select.py
backend/cv_pipeline/: config.py  main.py  manager.py  processing.py  (+2 more)
client/: desktop_client.py  metrics.py  mock_client.py  workers.py
deploy/: nginx.conf
docs/: ARCHITECTURE.md  LIVE2D.md  SETUP.md  SPRINT.md  UI_DESIGN.md
frontend/: .gitignore  Dockerfile  package.json  pnpm-lock.yaml
knowledge_base/: README.md  build_metadata.py  gen_faculty.py  metadata.json  test_queries.json
scripts/: download_models.py  fetch_models.sh  setup_all.sh  start_cascaded_speech_server.sh  start_openai_realtime_speech_server.sh  start_orchestrator.sh
target_speaker_pipeline/: IMPLEMENTATION_PLAN.md  README.md  phase1_offline_verify.py  phase3_realtime_pipeline.py  phase4_calibrate.py  pipeline.py  run.py
tests/: conftest.py  test_config.py  test_config_env.py  test_emotion.py  test_focus.py  test_gaze.py  test_multi_kiosk.py  test_posture.py  test_processing.py  test_profile_once.py  test_scoring.py  test_select.py  test_session.py  test_speaker_integration.py  test_state_machine.py
(+226 files in other folders)
